Production-Org-Metadata/force-app/main/default/objects/AMS_Asset_Assignment_History__c/AMS_Asset_Assignment_History__c.object-meta.xml
<CustomObject>
    <label>AMS Asset Assignment History</label>
    <nameField>
        <displayFormat>ASH - {000000}</displayFormat>
        <label>AMS Asset Assignment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMS Asset Assignment Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>