Production-Org-Metadata/force-app/main/default/objects/AMS_Asset_Assignment_History__c/fields/AMS_Asset__c.field-meta.xml
<CustomField>
    <fullName>AMS_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AMS Asset</label>
    <referenceTo>MVC_Internal_Asset__c</referenceTo>
    <relationshipLabel>AMS Asset Assignment Histories</relationshipLabel>
    <relationshipName>AMS_Asset_Assignment_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>