Production-Org-Metadata/force-app/main/default/objects/AMS_Asset_Assignment_History__c/fields/AMS_Assigned_Person__c.field-meta.xml
<CustomField>
    <fullName>AMS_Assigned_Person__c</fullName>
    <label>AMS Assigned Person</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>AMS Asset Assignment Histories</relationshipLabel>
    <relationshipName>AMS_Asset_Assignment_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>