Production-Org-Metadata/force-app/main/default/objects/AMS_Asset_Assignment_History__c/fields/AMS_Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>AMS_Assignment_Status__c</fullName>
    <formula>IF( AND( NOT(ISBLANK(AMS_Assigned_Date__c)), ISBLANK(AMS_Returned_Date__c)),
IMAGE(&quot;/resource/AMS_FORMULA_LABELS/Assigned.png&quot;, &quot;Assigned&quot;, 30, 150),
IF(NOT(ISBLANK(AMS_Returned_Date__c)), IMAGE(&quot;/resource/AMS_FORMULA_LABELS/Returned.png&quot;, &quot;Returned&quot;, 30, 150), &apos;&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMS_Assignment_Status</label>
    <type>Text</type>
</CustomField>