Production-Org-Metadata/force-app/main/default/objects/AMS_Asset_Assignment_History__c/fields/AMS_Condition_on_Return__c.field-meta.xml
<CustomField>
    <fullName>AMS_Condition_on_Return__c</fullName>
    <label>AMS Condition on Return</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>