Production-Org-Metadata/force-app/main/default/objects/AMS_Asset_Assignment_History__c/fields/AMS_Remark__c.field-meta.xml
<CustomField>
    <fullName>AMS_Remark__c</fullName>
    <label>AMS Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>