Production-Org-Metadata/force-app/main/default/objects/AMS_Asset_Assignment_History__c/fields/AMS_Returned_Date__c.field-meta.xml
<CustomField>
    <fullName>AMS_Returned_Date__c</fullName>
    <label>AMS Returned Date</label>
    <type>DateTime</type>
</CustomField>