Production-Org-Metadata/force-app/main/default/objects/AMS_Asset_Assignment_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AMS_Asset__c</columns>
    <columns>AMS_Assigned_Person__c</columns>
    <columns>AMS_Returned_Date__c</columns>
    <columns>AMS_Assignment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>